# CodonQSVT

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
data/: __init__.py  gapdh_sequences.py
results/: aae_results_gapdh.json  best_aae_params_gapdh.json  far_from_equilibrium.json  optimizer_benchmark_gapdh.json  pauli_truncation_norms.json  tsweep_hellinger_and_norm.json  tsweep_qsvt_vs_qsp.json
scripts/: aae_results_gapdh.py  far_from_equilibrium.py  optimizer_benchmark_gapdh.py  paper_figures.py  pauli_truncation_norms.py  plot_hellinger_and_norm.py  smoke_test.py  tsweep_qsvt_vs_qsp.py  tsweep_qsvt_vs_qsp_hellinger.py  visualize_encoding.py
src/: __init__.py  aae_encoding.py  block_encoding.py  constants.py  experiment.py  gy94_model.py  hamiltonian.py  qsp_angles.py  qsp_circuit.py  qsvt_angles_imagtime.py  qsvt_circuit_imagtime.py  qsvt_imagtime_noisy.py  trotter.py
tests/: __init__.py  test_aae_cache.py  test_block_encoding.py  test_qsp_minimal.py
